http://www.grame.fr
====================================================
Copyright GRAME (c) 2009-2015
----------------------------------------------------
INScore originates from the Interlude project.
It has been supported by the ANR 
(ANR-08-CORD-010 - ANR-12-CORD-0009)
====================================================

----------------------------------------------------
Version 1.17
- 'rootPath' message can be called without parameter to clear a scene rootPath
- log window supports the 'foreground' message
- user actions on windows are generating 'foreground' messages
- application quit when the last scene is closed (even when the log window is opened) 
- new 'lock' message supported by all objects to prevent an object deletion
- osc output buffer has been enlarged to 32768
- crash bug corrected: outgoing OSC messages are now handling buffer overflow exceptions

----------------------------------------------------
Version 1.16
- support for touch events (scene zoom is desactived due to a conflict with touch events)
- new radial signal representation
- httpd object is visible as a qrcode giving the server url
- httpd object is now part of the library (not a plugin any more)
- frameless and fullscreen mode are now exclusive at model level
- frameless and fullscreen modes management revised at view level
- String without spaces no longer need to be quoted

----------------------------------------------------
Version 1.15 - tagged on July 15 2015
- new frame query method: get 'frame' gives the coordinates of 4 points that represent the 
  object frame, expressed in the scene local coordinates system and including all the graphic 
  transformations (scaling, rotations on the 3 axis, shear etc.)
- pen messages are now accepted by all the components. This extension is provided to display
  any object bounding box. Note that for rects, ellipses etc. the previous behavior is preserved.
- Bug correction : get message for line arrow heads was not correct.